[package]
name = "enigma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
anyhow = "*"
bevy = { version="*", default-features = false, features=[
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_text",
    "multi-threaded",
    "zstd"
] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
features = ["bevy/dynamic"]

# Enable high optimizations for bevy when building in release mode:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"